--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.7",
     "swiper": "^11.2.2",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
